Tests implemented. MockMvc doesn't work with BindingResult (disabled shortenUrl_invalidFullLink() method in MainControllerTest). Closes #4